--- a/index.html
+++ b/index.html
@@ -5,15 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    
 </head>
 <body>
     
 </body>
 <script src='./BeautifulGirl.js'></script>
 <script>
-// 可以使用暴露出来的girl对象扩充指令
-girl['打招呼'] = function(){
-    alert('你好啊');
-}
+    girl.fn.转圈 = function(){
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.向右();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.向右();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.向右();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.前进();
+       girl.向右();
+
+    }
+    alert(123);
 </script>
 </html>
